# webdev_playground

rust-axum-htmx/: .env.sample  Cargo.toml  README.md  csrf_test.sh
rust-axum-htmx/migrations/: 1_setup.sql  2_user.sql
rust-axum-htmx/src/: error.rs  github.rs  html.rs  main.rs  models.rs  views.rs
rust-axum-htmx/src/html/: oauth.rs  session.rs
rust-axum-htmx/templates/: box.html  form.html  index.html  repos.html  secret.html
url-shortener/: README.md  requests.http
url-shortener/golang-echo/: README.md  go.mod  go.sum
url-shortener/golang-echo/cmd/server/: main.go
url-shortener/golang-echo/db/migrations/: 20231103004509_create_links_table.down.sql  20231103004509_create_links_table.up.sql  20231103235939_add_counter_to_urls.down.sql  20231103235939_add_counter_to_urls.up.sql
url-shortener/golang-echo/internals/routes/: api_routes.go  html_routes.go
url-shortener/golang-echo/internals/shortener/: helper.go
url-shortener/golang-echo/internals/views/: templates.go
url-shortener/golang-echo/templates/: base.html  feed_poll.html  feed_sse.html  feed_ws.html  index.html  shorten.html  shorten_post.html  urls.html
url-shortener/nodejs-express/: package-lock.json  package.json
url-shortener/nodejs-express/assets/: poll.js  sse.js  ws.js
url-shortener/nodejs-express/migrations/: 1699220310350_urls-table.js
url-shortener/nodejs-express/src/: api.js  helper.js  index.js  queries.js  views.js
url-shortener/nodejs-express/views/: base.html  feed_poll.html  feed_sse.html  feed_ws.html  index.html  shorten.html  shorten_post.html
