[package]
name = "rust-axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-session = "3.0.0"
axum = "0.6.20"
minijinja = { version = "1.0.9", features = ["loader"] }
minijinja-autoreload = "1.0.9"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
dotenv = "0.15.0"
futures = "0.3.29"
oauth2 = "4.1"
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
tower-sessions = { version = "0.3.3", features = ["axum-core", "postgres-store"] }
tower = "0.4.13"
axum-macros = "0.3.8"

[build-dependencies]
syn = "1"
